--- a/WpfApplication1/WpfApplication1/Properties/Settings.settings
+++ b/WpfApplication1/WpfApplication1/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SchoolSafeID.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="school_url" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://www.schoolsafeid.com/visitor-management&amp;s=test-school</Value>
+    </Setting>
+    <Setting Name="printer_name" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DYMO LabelWriter 450 Turbo</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
