--- a/WpfApplication1/WpfApplication1/packages.config
+++ b/WpfApplication1/WpfApplication1/packages.config
@@ -5,6 +5,7 @@
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net45" />
   <package id="Microsoft.Expression.Encoder" version="4.0.4276.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="PDFtoPrinter" version="1.0.6" targetFramework="net45" />
   <package id="WpfWebcamControl" version="3.3.1" targetFramework="net45" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
