--- a/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
+++ b/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SchoolSafeID</RootNamespace>
     <AssemblyName>SchoolSafeID</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -30,6 +30,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -69,9 +70,13 @@
     <Reference Include="PDFtoPrinter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFtoPrinter.1.0.6\lib\net45\PDFtoPrinter.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -114,6 +119,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="APIManager.cs" />
     <Compile Include="BadgePreview.xaml.cs">
       <DependentUpon>BadgePreview.xaml</DependentUpon>
     </Compile>
@@ -145,6 +151,7 @@
     <Compile Include="TakePhoto.xaml.cs">
       <DependentUpon>TakePhoto.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UriString.cs" />
     <Compile Include="ValidatorExtensions.cs" />
     <Compile Include="Visitor.cs" />
     <Compile Include="WebCam.cs" />
