--- a/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
+++ b/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
@@ -142,6 +142,9 @@
     <Compile Include="PrintCompleted.xaml.cs">
       <DependentUpon>PrintCompleted.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ScanFailure.xaml.cs">
+      <DependentUpon>ScanFailure.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ScanLicense.xaml.cs">
       <DependentUpon>ScanLicense.xaml</DependentUpon>
     </Compile>
@@ -207,6 +210,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="PrintCompleted.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ScanFailure.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
