--- a/WpfApplication1/WpfApplication1/Properties/Settings.settings
+++ b/WpfApplication1/WpfApplication1/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="school_url" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://www.schoolsafeid.com/visitor-management&amp;s=test-school</Value>
+      <Value Profile="(Default)">https://dev.schoolsafeid.com/visitor-management&amp;s=frontier-elementary</Value>
     </Setting>
     <Setting Name="printer_name" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DYMO LabelWriter 450 Turbo</Value>
