--- a/WpfApplication1/WpfApplication1/Properties/Settings.settings
+++ b/WpfApplication1/WpfApplication1/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SchoolSafeID.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="school_url" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://dev.schoolsafeid.com/visitor-management&amp;s=frontier-elementary</Value>
+    <Setting Name="job_no" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">18872</Value>
     </Setting>
     <Setting Name="printer_name" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DYMO LabelWriter 450 Turbo</Value>
