--- a/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
+++ b/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
@@ -135,6 +135,9 @@
     <Compile Include="HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MatchStudentID.xaml.cs">
+      <DependentUpon>MatchStudentID.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ModalWindow.xaml.cs">
       <DependentUpon>ModalWindow.xaml</DependentUpon>
     </Compile>
@@ -229,6 +232,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MatchStudentID.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ModalWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
