--- a/WpfApplication1/WpfApplication1/packages.config
+++ b/WpfApplication1/WpfApplication1/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net452" />
+  <package id="FluentScheduler" version="5.3.0" targetFramework="net452" />
   <package id="Gu.Wpf.Adorners" version="1.5.1.0" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net45" />
