--- a/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
+++ b/WpfApplication1/WpfApplication1/SchoolSafeID.csproj
@@ -17,8 +17,8 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
-    <PublishUrl>F:\csharp\published\</PublishUrl>
-    <Install>true</Install>
+    <PublishUrl>D:\xampp5.6\htdocs\dev.schoolsafeid.com\app\</PublishUrl>
+    <Install>false</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
@@ -29,13 +29,13 @@
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://dev.schoolsafeid.com/app/</InstallUrl>
     <UpdateUrl>https://www.schoolsafeid.com/app/</UpdateUrl>
+    <TargetCulture>en-US</TargetCulture>
     <ProductName>Visitor Management System</ProductName>
     <PublisherName>schoolSAFEid</PublisherName>
-    <MinimumRequiredVersion>1.0.0.1</MinimumRequiredVersion>
-    <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>4</ApplicationRevision>
+    <MinimumRequiredVersion>1.0.0.4</MinimumRequiredVersion>
+    <ApplicationRevision>6</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
+    <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -66,7 +66,7 @@
     <ManifestKeyFile>SchoolSafeID_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
@@ -137,6 +137,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -197,6 +198,8 @@
     <Compile Include="DigitalPass.xaml.cs">
       <DependentUpon>DigitalPass.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\DependencyObjectExtensions.cs" />
+    <Compile Include="Extensions\FrameworkElementExtensions.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
@@ -213,6 +216,8 @@
     <Compile Include="PrintCompleted.xaml.cs">
       <DependentUpon>PrintCompleted.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Providers\ITouchKeyboardProvider.cs" />
+    <Compile Include="Providers\TouchKeyboardProvider.cs" />
     <Compile Include="ScanFailure.xaml.cs">
       <DependentUpon>ScanFailure.xaml</DependentUpon>
     </Compile>
@@ -244,6 +249,7 @@
     <Compile Include="TakePhoto.xaml.cs">
       <DependentUpon>TakePhoto.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UpdateManager.cs" />
     <Compile Include="UriString.cs" />
     <Compile Include="ValidatorExtensions.cs" />
     <Compile Include="Student.cs" />
@@ -369,6 +375,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <SplashScreen Include="splash.jpg" />
     <Resource Include="ssid.ico" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -393,7 +400,9 @@
     <Resource Include="fonts\Lato-Regular.ttf" />
     <Resource Include="fonts\Lato-Thin.ttf" />
     <Resource Include="fonts\Lato-ThinItalic.ttf" />
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -444,7 +453,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <SplashScreen Include="SplashScreen.jpg" />
+    <Resource Include="SplashScreen.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\bar_code.png" />
@@ -476,12 +485,12 @@
   <ItemGroup>
     <PublishFile Include="WebCam_Capture">
       <Visible>False</Visible>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <FileType>Assembly</FileType>
     </PublishFile>
   </ItemGroup>
